# python-project-lvl2

./: .gitignore  .travis.yml  Makefile  README.md  after.yml  pyproject.toml
gendiff/: cli.py  constants.py  diff_tree.py  parsers.py
gendiff/cli/: posix.py
gendiff/comparators/: json.py  json_cmp.py  plain_map.py  tree_gen.py
gendiff/diff_structure/: enums.py  tree.py
gendiff/formatters/: json.py  plain.py  selector.py  tree.py  yaml.py
gendiff/parsers/: json.py  parser_selector.py  selector.py  yaml.py
gendiff/scripts/: gendiff.py
tests/: complex_json_test.py  complex_tree_test.py  complex_yaml_test.py  conftest.py  json_test.py  plain_json_test.py  plain_yaml_test.py  yaml_test.py
tests/fixtures/: complex_result.txt  complex_result_json.json  complex_result_plain.txt  complex_result_tree.txt  complex_result_yaml.yml  complex_yaml_after.yml  complex_yaml_before.yml  plain_json_after.json  plain_json_before.json  plain_json_result.txt  plain_result.txt  plain_yaml_before.yml  plain_yaml_result.txt
