[tool.poetry]
name = "aa989190f363e46d_gendiff"
version = "0.1.0"
description = "structured files difference finder"
authors = ["Al Rempel <aa989190f363e46d@googlemail.com>"]
repository = "https://github.com/aa989190f363e46d/python-project-lvl2"
license = "MIT"
packages = [
    { include = "gendiff" }
]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
flake8 = "^3.7"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
